2007-12-24  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1_impl/hashtable_policy.h (_Prime_rehash_policy::
	_M_next_bkt, _M_bkt_for_elements, _M_need_rehash): Use __builtin_ceil.
	* include/std/unordered_map: Do not include <cmath>; prefer
	<bits/stringfwd.h> to <string>.
	* include/std/unordered_set: Likewise.
	* include/tr1/unordered_map: Likewise.
	* include/tr1/unordered_set: Likewise.

2007-12-24  Paolo Carlini  <pcarlini@suse.de>

	* include/std/complex (complex<float>::complex(float, float)):
	Uglify parameters.

2007-12-17  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/locale_classes.h (has_facet, use_facet): Simplify
	RTTI checks.

2007-12-17  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* docs/html/test.html: Fix paths and notes on running subset of tests.
	* docs/html/ext/parallel_mode.html: Fix markup typos.
	* docs/html/ext/pb_ds/index.html: Likewise.

2007-12-17  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/22_locale/global_templates/
	standard_facet_hierarchies.cc: Fix for generic locale model.

2007-12-16  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* ChangeLog: Fix my email address in previous two entries.

2007-12-16  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* testsuite/20_util/shared_ptr/thread/default_weaktoshared.cc: Add
	required dg-option for cygwin and darwin targets.
	* testsuite/20_util/shared_ptr/thread/mutex_weaktoshared.cc: Likewise.

2007-12-15  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/tr1_impl/boost_shared_ptr.h: Add support for allocators,
	aliasing, make_shared and rvalue-references. Move __shared_count
	and _Sp_counted_* classes to new headers.
	* include/tr1_impl/boost_sp_counted_base.h: New.
	* include/bits/boost_sp_shared_count.h: New.
	* include/tr1/boost_sp_shared_count.h: New.
	* include/std/memory, include/tr1/memory: Include new headers.
	* include/Makefile.am: Adjust.
	* include/Makefile.in: Regenerate.
	* docs/html/documentation.html: Link to shared_ptr notes.